welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:9: error: type mismatch;
 found   : Unit
 required: Boolean
		if (isWeekend == true) {
                ^